# clock-in-clock-out

./: .gitignore  Dockerfile  README.md  doc.md  docker-compose-prod.yml  docker-compose.yml  docker.env
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-prod  Rocket.toml
backend/cico-api/: Cargo.toml  Rocket.toml
backend/cico-api/migrations/2020-08-28-021144_create_users_table/: up.sql
backend/cico-api/src/: main.rs  schema.rs
backend/cico-api/src/Models/: helpers.rs  user.rs
backend/cico-api/src/Routes/: api_users.rs
backend/migrations/2020-08-28-021144_create_users_table/: up.sql
backend/migrations/2020-09-17-111644_user_groups/: down.sql  up.sql
backend/migrations/2020-09-23-021216_users_tasks_tags/: down.sql  up.sql
backend/src/: db_schema.rs  main.rs  schema.rs
backend/src/Helpers/: auth.rs  jwt.rs  jwt_helpers.rs  misc.rs  misc_helpers.rs  redis_helpers.rs
backend/src/Models/: helpers.rs  tag.rs  task.rs  task_tag.rs  user.rs
backend/src/Routes/: api_tasks.rs  api_users.rs
frontend/: Dockerfile  Dockerfile-prod  nginx.conf  package.json
frontend/src/: App.tsx  AppRouter.tsx  index.tsx
frontend/src/Components/: ClockInClockOut.tsx  ComboBox.tsx  Header.tsx  Input.tsx  Login.tsx  Register.tsx  TimeTracker.tsx  TrackerCard.tsx
frontend/src/Functions/: FormatDuration.tsx
public/: index.html
src/: App.tsx  index.css
src/Components/: ClockInClockOut.tsx  Header.tsx  If.tsx  Input.tsx
src/Functions/: FormatDuration.tsx
src/Pages/: HomePage.tsx
src/Styles/: Header.scss  Imports.scss  Input.scss
tools/: deploy-prod.sh
(+21 files in other folders)
