[package]
name = "cico-api"
version = "0.1.0"
authors = ["Zach Nicoll <zach.nicoll55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.115"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
dotenv = "0.15.0"
bcrypt = "0.8"
jsonwebtoken = "7"
chrono = "0.4.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel_migrations = "1.4.0"

[dependencies.dotenv_codegen]
version = "0.15.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]